--- a/GSTInvoice/src/main/resources/application.properties
+++ b/GSTInvoice/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/supperbilling
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
