--- a/MasterService/src/main/resources/application.properties
+++ b/MasterService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8083
 spring.application.name=masterservice
 
-<!--eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka-->
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.mvc.view.suffix=.jsp
 
