--- a/MasterService/bin/pom.xml
+++ b/MasterService/bin/pom.xml
@@ -48,6 +48,12 @@
 			<version>2.1.4.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
