--- a/SBZuul_Server/src/main/resources/application.properties
+++ b/SBZuul_Server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8081
 spring.application.name=zuul
+eureka.client.register-with-eureka=true
 eureka.client.serviceUrl.defaultzone=http://localhost:8761/eureka
+zuul.routes.getMaster.service-id=masterservice
 
 
 
